Enhance message handling: validate content before sending, update chat title based on first user message, and improve logging for debugging